--- a/css/estilo.css
+++ b/css/estilo.css
@@ -45,16 +45,19 @@
 #seccion1_aside{
     height: 30%;
     float: right;
+    margin: 20px;
 }
 
 #seccion2_section{
     height: 30%;
     float: left;
+    margin: 20px;
 }
 
 #seccion2_aside{
     height: 30%;
     float: right;
+    margin: 20px;
 }
 
 #pie{   
